--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
   <modules>
       
     <module>proyecto-jpa</module>
+    <module>proyecto-ejb</module>
+    <module>anotaciones</module>
       
   </modules>
 </project>
