Añadir módulo WAR

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
       
     <module>proyecto-jpa</module>
     <module>proyecto-ejb</module>
+    <module>proyecto-war</module>
     
       
   </modules>
