--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <module>proyecto-jpa</module>
     <module>proyecto-ejb</module>
     <module>proyecto-war</module>
-    
+    <module>proyecto-ear</module>
       
   </modules>
 </project>
