--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <module>proyecto-ejb</module>
     <module>proyecto-war</module>
     <module>proyecto-ear</module>
+	<module>proyecto-tests</module>
       
   </modules>
 </project>
