--- a/proyecto-ejb/pom.xml
+++ b/proyecto-ejb/pom.xml
@@ -42,7 +42,12 @@
     		<groupId>es.uma.informatica.sii</groupId>
     		<artifactId>anotaciones</artifactId>
     		<version>1.0.0</version>
-</dependency>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-csv</artifactId>
+    		<version>1.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
